--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,129 +1,46 @@
-.container {
-  padding: 0 2rem;
-}
-
-.main {
-  min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer {
-  display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
-}
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
-  text-align: center;
-}
-
-.description {
-  margin: 4rem 0;
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
-.grid {
+.banner-container {
   display: flex;
   align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
-}
-
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
-}
-
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
-
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
+  flex-direction: row;
+  height: 3em;
+  padding: 0 0.75em;
+  background-color: white;
+  font-family: 'Nunito', sans-serif;
+  border-bottom: 1px solid 	#F0F0F0;
+  
+  /* position: sticky;
+  top: 0px; */
 }
 
 .logo {
-  height: 1em;
-  margin-left: 0.5rem;
+  height: 3em;
+  display: flex;
+  align-items: center;
+  width: 15%;
+  /* background-color: red; */
+  font-weight: bolder;
 }
 
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
-  }
+.searchbar-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 85%
 }
 
-@media (prefers-color-scheme: dark) {
-  .card,
-  .footer {
-    border-color: #222;
-  }
-  .code {
-    background: #111;
-  }
-  .logo img {
-    filter: invert(1);
-  }
+#main-searchbar {
+  border: 0.5px solid lightgrey;
+  border-radius: 5em;
+  padding-left: 1em;
+  width:80%;
+  height: 2em;
+  outline: none;
+  font-family: 'Nunito', sans-serif;
+}
+
+#main-searchbar:hover, #main-searchbar:focus {
+  border: 0.5px solid #009688;
+  border-radius: 5em;
+  width:80%;
+  outline: none;
 }
