--- a/styles/city.module.css
+++ b/styles/city.module.css
@@ -63,7 +63,7 @@
 .content {
     width: 100%;
     height: 60%;
-    /* background-color: aqua; */
+    background-color: aqua;
     overflow: hidden;
 }
 
