--- a/styles/cityList.module.css
+++ b/styles/cityList.module.css
@@ -34,6 +34,7 @@
   background: rgba(255, 255, 255, .7);
   border-bottom-right-radius: 0.75em;
   border-bottom-left-radius: 0.75em;
+  font-size: x-large;
 }
 
 .city .city-quick-data {
@@ -42,11 +43,12 @@
     bottom: 4%;
     padding: 2%;
     padding-left: 6%;
-    width: 50%;
+    width: 65%;
     background: rgba(255, 255, 255, .7);
     font-size: x-large;
     border-top-right-radius: 0.75em;
     border-bottom-right-radius: 0.75em;
+    font-size: large;
 }
 
 .city-quick-data-item {
@@ -57,5 +59,18 @@
 }
 
 .city-quick-data-item-text {
+  margin-left: 4%;
+}
+
+.city-quick-data-item-stars {
+  display: flex;
+  flex-direction: row;
+}
+
+.city-quick-data-item-stars > div {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
   margin-left: 4%;
 }
