--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -12,7 +12,7 @@
     font-family: 'Nunito', sans-serif;
     border-top: 1px solid 	#F0F0F0;
 
-    position: sticky;
+    position: fixed;
     bottom: 0px;
 }
 
