--- a/styles/city.module.css
+++ b/styles/city.module.css
@@ -1,9 +1,7 @@
-/* .city-container {
-    display: none;
-    flex-direction: row;
+.city-container {
     width: 100%;
     height: 100%;
-} */
+}
 
 .city-banner {
     position: relative;
@@ -62,7 +60,7 @@
 
 .content {
     width: 100%;
-    height: 60%;
+    height: 100%;
     background-color: aqua;
     overflow: hidden;
 }
