--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,8 @@ html,
 body {
   padding: 0;
   margin: 0;
+  height: 90vh;
+  /* background-color: aquamarine; */
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
@@ -25,6 +27,6 @@ a {
   }
 }
 
-.shadow {
-
+#__next {
+ /* height: 100%; */
 }
