--- a/styles/city.module.css
+++ b/styles/city.module.css
@@ -61,8 +61,6 @@
 .content {
     width: 100%;
     height: 100%;
-    background-color: aqua;
-    overflow: hidden;
 }
 
 .city-info-container {
@@ -80,7 +78,18 @@
     font-size: x-large;
 }
 
-.city-info-item-content {
+.city-info-item-places {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    height: 300px;
+    margin-top: 2%;
+    margin-bottom: 2%;
+    overflow-y: hidden;
+    overflow-x: scroll;
+}
+
+.city-info-item-containter {
     display: flex;
     flex-direction: row;
 }
