--- a/styles/cityList.module.css
+++ b/styles/cityList.module.css
@@ -9,27 +9,31 @@
 .city {
   display: flex;
   position: relative;
-  width: 92%;
-  height: 100%;
-  margin-top: 5%;
-  border-radius: 1.75em;
-  box-shadow: 5px 5px 7px #D3D3D3;
+  width: 100%;
+  height: 300px;
+  /* margin-top: 5%; */
+  /* border-radius: 1.75em; */
+  /* box-shadow: 5px 5px 7px #D3D3D3; */
   overflow: hidden;
+  border-bottom: 2px solid grey;
 }
 
 .city .city-image {
-  width: 100%;
+  /* width: 100%; */
   height: 100%;
+  filter: brightness(60%)
 }
   
-.city .city-name {
+.city .city-name-container {
   position: absolute;
   left: 8%;
   top: 0%;
-  padding-top: 6%;
-  padding: 4%;
+  padding: 2%;
+  
+  padding-left: 4%;
+  padding-right: 4%;
+
   color: black;
-  font-size: xx-large;
   font-weight: 500;
   background: rgba(255, 255, 255, .7);
   border-bottom-right-radius: 0.75em;
@@ -37,17 +41,28 @@
   font-size: x-large;
 }
 
+
+.city .city-name {
+  font-size: x-large;
+}
+
+
+.city .country-name {
+  font-size: medium;
+}
+
+
 .city .city-quick-data {
     position: absolute;
     left: 0%;
-    bottom: 4%;
+    bottom: 0%;
     padding: 2%;
     padding-left: 6%;
     width: 65%;
     background: rgba(255, 255, 255, .7);
     font-size: x-large;
     border-top-right-radius: 0.75em;
-    border-bottom-right-radius: 0.75em;
+    /* border-bottom-right-radius: 0.75em; */
     font-size: large;
 }
 
