--- a/styles/posts.module.css
+++ b/styles/posts.module.css
@@ -3,11 +3,11 @@
     justify-content: center;
     align-items: center;
     width:100%;
-    margin-top: 2%;
+    margin-top: 4%;
 }
 
 .create-post-button {
-    width: 30%;
+    width: fit-content;
     display: flex;
     justify-content: center;
     align-items: center;
