--- a/styles/banner.module.css
+++ b/styles/banner.module.css
@@ -2,6 +2,7 @@
     display: flex;
     align-items: center;
     flex-direction: row;
+    justify-content: space-between;
     height: 3em;
     padding: 0 0.75em;
     background-color: white;
@@ -16,31 +17,13 @@
     height: 3em;
     display: flex;
     align-items: center;
-    width: 15%;
+    /* width: 15%; */
     /* background-color: red; */
     font-weight: bolder;
   }
-  
-  .searchbar-container {
+
+  .account-icon {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 85%
-  }
-  
-  #main-searchbar {
-    border: 0.5px solid lightgrey;
-    border-radius: 5em;
-    padding-left: 1em;
-    width:80%;
-    height: 2em;
-    outline: none;
-    font-family: 'Nunito', sans-serif;
-  }
-  
-  #main-searchbar:hover, #main-searchbar:focus {
-    border: 0.5px solid #009688;
-    border-radius: 5em;
-    width:80%;
-    outline: none;
   }
