--- a/styles/globals.css
+++ b/styles/globals.css
@@ -30,6 +30,11 @@ a {
   }
 }
 
-#__next {
- /* height: 100%; */
+
+@media screen and (min-width:450px) {
+  #__next {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+   }
 }
