--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -4,8 +4,9 @@
 .nav-container {
     position: fixed;
     bottom: 0px;
-    left: 0;
+    /* left: 0; */
     width: 100%;
+    max-width: 400px;
     height: 60px;
     display: flex;
     align-items: center;
